# agentic-custom-rag

./: .gitignore  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt
app/: main.py
app/agents/: graph.py  state.py
app/agents/graph/: __init__.py  edges.py  nodes.py  workflow.py
app/agents/llm/: __init__.py  model.py
app/agents/nodes/: __init__.py  answer_node.py  retrieve_node.py  route_node.py
app/agents/tools/: __init__.py  search.py
app/api/: routes.py  schemas.py
app/core/: config.py  constants.py  logging.py
app/llm/: __init__.py
app/rag/: __init__.py
app/rag/loaders/: __init__.py  web_loader.py
app/rag/processing/: __init__.py
app/rag/retrieval/: __init__.py  retriever.py
app/rag/sources/: __init__.py  source_registry.py
app/services/: rag_service.py
my_agent/: agent.py
my_agent/utils/: __init__.py  nodes.py  tools.py
rag/: __init__.py  chunking.py  constants.py  retrieval.py  web_loader.py  web_sources.py
rag/nodes/: generate_answer.py  generate_query_or_respond.py  grade_documents.py  rewrite_question.py  workflow_graph.py
tests/: test_api_routes.py  test_nodes.py  test_tools.py  test_workflow.py
